[package]
name = "dns-bitcoin-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
dnssec-prover = { version = "0.6.7", default-features = false, features = ["std", "validation", "tokio"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "dns-bitcoin-resolver"
path = "src/main.rs"